# ketra

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  github.rs  main.rs  projects.rs  templates.rs  types.rs  utils.rs
src/styles/: main.css
src/ts/: api.ts  state.ts  storage.ts  types.ts
src/ts/drag/: dragHandler.ts  trashZone.ts
src/ts/ui/: appContextMenu.ts  cards.ts  contextMenu.ts  contextMenuManager.ts  deleteModal.ts  events.ts  renderer.ts  toast.ts
