[package]
name = "ketra"
version = "1.0.0"
description = "Project launcher for Windows and WSL"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.1"
tauri-plugin-dialog = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
clipboard-win = "5.4.1"
